--- a/Clases_Coder/Clases_Coder/plantillas/index.html
+++ b/Clases_Coder/Clases_Coder/plantillas/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>esta es nuestra primer plantilla!</h1>
+    <h1>Esta es nuestra primer plantilla!</h1>
 </body>
 </html>
